# travmap

./: .dockerignore  .gitignore  Dockerfile  README.md  README.txt  database.php  imageinit.php  index.php  libaima.php  libcache.php  liblogerr.php  loadentities.php  loading.php  localise.php  map.php  old_index.php  options.php  output.php  query.php  rainbow.php  render.php  robots.txt  script.js  style.css  update.sh  update_mysql.sh  update_sqlite.sh  update_text.sh  util.php  version.php
.github/: dependabot.yml
.github/workflows/: deploy.yml  docker.yml  publish.yml
htdocs/: Dockerfile  add.php  ads.php  ajax.php  config.php.sample  database.php  imageinit.php  index.php  libaima.php  libcache.php  libdbcache.php  liblogerr.php  libtimer.php  loadentities.php  localise.php  map.php  options.php  output.php  query.php  rainbow.php  render.php  robots.txt  router.php  script.js  servers.php  status.php  style.css  util.php  version.php
htdocs/lang/: ar.txt  ca.txt  cs.txt  da.txt  de.txt  en.txt  es.txt  fi.txt  fr.txt  hr.txt  hu.txt  (+13 more)
lang/: ca.txt  cn.txt  cs.txt  cz.txt  da.txt  de.txt  dk.txt  empty.txt  en.txt  es.txt  fi.txt  fr.txt  hr.txt  hu.txt  it.txt  lt.txt  nl.txt  no.txt  pl.txt  pt.txt  ro.txt  ru.txt  sk.txt  sv.txt  tr.txt  zh-TW.txt  zh.txt
run/: run  travmap.service
utils/: add_server  backup.sh  clear_cache.sh  clear_dbcache.sh  config.sh.sample  docker_run.sh  init_pgsql.sh  manage.py  mysql.sh  pgsql.sh  pyproject.toml  remove_server  sql2pg.pl  update.py  update.sh  update_mysql.sh  update_pgsql.sh  update_status  update_text.sh
(+5 files in other folders)
