[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
]

[tool.ruff]
line-length = 120

[tool.pytest]
addopts = ["--doctest-modules"]
