[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.34",
]

[tool.ruff]
line-length = 120

[tool.pytest]
addopts = ["--doctest-modules"]
